Fix box overlap issues.

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,8 +8,11 @@
 
 .wrapper {
   display: block;
+  width: 100%;
+  margin-right: auto;
+  margin-left: auto;
   box-sizing: border-box;
-  margin-bottom: 200px;
+  overflow: hidden;
 }
 
 .column {
